--- a/app.json
+++ b/app.json
@@ -10,7 +10,8 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.tommywong.todaydowhat"
+      "bundleIdentifier": "com.tommywong.todaydowhat",
+      "fonts": ["./assets/fonts/Poppins-Regular.ttf"]
     },
     "android": {
       "adaptiveIcon": {
@@ -26,6 +27,26 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+      [
+        "expo-font",
+        {
+          "fonts": ["./assets/fonts/Poppins-Regular.ttf"],
+          "android": {
+            "fonts": [
+              {
+                "fontFamily": "Poppins",
+                "fontDefinitions": [
+                  {
+                    "path": "./assets/fonts/Poppins-Regular.ttf",
+                    "weight": 400,
+                    "style": "Regular"
+                  }
+                ]
+              }
+            ]
+          }
+        }
+      ],
       "expo-router",
       [
         "expo-splash-screen",
