--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todaydowhat",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -31,13 +31,10 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-edge-to-edge": "^1.6.2",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-nitro-modules": "^0.28.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-unistyles": "^3.0.9",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5"
   },
